syntax = "proto3";
package sft.datamarket.v1;

import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/CosmosContracts/juno/x/datamarket/types";

message GenesisState {
  Params params = 1;
}

message Params {
  cosmos.base.v1beta1.Coin data_price = 1;
  double fee_percentage = 2;
}
